--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <button id="currentLocationBtn" style="padding : 5px 5px"><img src="images/bhere.png"></button>
     </div>
 
-    <script type="text/javascript" src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=63a22465d97db6dcfc104647d90a6d3b&libraries=services"></script>
+    <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=63a22465d97db6dcfc104647d90a6d3b&libraries=services"></script>
     <script>
 
     // 전역변수 선언
