--- a/index.html
+++ b/index.html
@@ -257,7 +257,6 @@
 <body>
     <div id="map"></div>
 
-    <!-- 검색창 -->
     <div class="daumIndex">
         <fieldset class="fld_inside"> <!-- 제목 및 검색창 배경 박스 -->
             <div class="header-container">
@@ -267,6 +266,25 @@
                     </h2>
                 </div>
             </div>
+
+            <div class="map_wrap">
+                <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
+
+    <div id="menu_wrap" class="bg_white">
+        <div class="option">
+            <div>
+                <form onsubmit="searchPlaces(); return false;">
+                    키워드 : <input type="text" value="검색" id="keyword" size="15"> 
+                    <button type="submit">검색하기</button> 
+                </form>
+            </div>
+        </div>
+        <hr>
+        <ul id="placesList"></ul>
+        <div id="pagination"></div>
+    </div>
+</div>
+            
             <div class="header-container2" style="margin-left: 10px; background: none; border: none; box-shadow: none;">
                 <div class="box_Icons">
                     <button id="showIconsBtn">재난</button>
@@ -298,24 +316,6 @@
         <button id="zoomOutBtn" style="font-size: 22px;">-</button>
         <button id="currentLocationBtn" style="padding : 5px 5px"><img src="images/bhere.png"></button>
     </div>
-
-    <div class="map_wrap">
-    <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
-
-    <div id="menu_wrap" class="bg_white">
-        <div class="option">
-            <div>
-                <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input type="text" value="이태원 맛집" id="keyword" size="15"> 
-                    <button type="submit">검색하기</button> 
-                </form>
-            </div>
-        </div>
-        <hr>
-        <ul id="placesList"></ul>
-        <div id="pagination"></div>
-    </div>
-</div>
     
     <script src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=63a22465d97db6dcfc104647d90a6d3b&libraries=services"></script>
 
