--- a/index.html
+++ b/index.html
@@ -310,6 +310,10 @@
         <a href="forum.html" class="link">게시판</a>
     </div>
 
+    <div class="header-container4 style="right : 220px">
+        <a href="test.html" class="link">테스트</a>
+    </div>
+
     <!-- 커스텀 확대/축소 버튼 -->
     <div class="zoom-btn">
         <button id="zoomInBtn">+</button>
