--- a/test.html
+++ b/test.html
@@ -11,7 +11,7 @@
     width:100%;
     height:380px;}
 #menu_wrap {
-    display: none; /* 기본적으로 숨김 */
+    display: block; /* 기본적으로 숨김 */
     position: absolute;
     top: 0;
     left: 0;
@@ -45,8 +45,14 @@
 #pagination {margin:10px auto;text-align: center;}
 #pagination a {display:inline-block;margin-right:10px;}
 #pagination .on {font-weight: bold; cursor: default;color:#777;}
+
+/* 검색 결과 목록과 페이지네이션 기본적으로 숨김 */
+#placesList, #pagination {
+    display: none;
+}
 </style>
 </head>
+
 <body>
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
@@ -97,7 +103,8 @@ function searchPlaces() {
     }
 
     // 검색 실행 시 메뉴를 표시하도록 설정
-    document.getElementById('menu_wrap').style.display = 'block';
+    document.getElementById('placesList').style.display = 'block';
+    document.getElementById('pagination').style.display = 'block
     
     // 장소검색 객체를 통해 키워드로 장소검색을 요청합니다
     ps.keywordSearch( keyword, placesSearchCB); 
