--- a/test.html
+++ b/test.html
@@ -104,7 +104,7 @@ function searchPlaces() {
 
     // 검색 실행 시 메뉴를 표시하도록 설정
     document.getElementById('placesList').style.display = 'block';
-    document.getElementById('pagination').style.display = 'block
+    document.getElementById('pagination').style.display = 'block';
     
     // 장소검색 객체를 통해 키워드로 장소검색을 요청합니다
     ps.keywordSearch( keyword, placesSearchCB); 
