--- a/test.html
+++ b/test.html
@@ -5,9 +5,11 @@
     <title>키워드로 장소검색하고 목록으로 표출하기</title>
     <style>
 .map_wrap, .map_wrap * {margin:0;padding:0;font-family:'Malgun Gothic',dotum,'돋움',sans-serif;font-size:12px;}
-.map_wrap a, .map_wrap a:hover, .map_wrap a:active{color:#000;text-decoration: none;}
+
 .map_wrap {
-    position:relative;
+    position: relative;
+    width: 100%;
+    height: 360px;
 }
 #menu_wrap {
     display: block; /* 기본적으로 숨김 */
@@ -25,6 +27,7 @@
     border-radius: 10px;
 }
 .bg_white {background:#fff;}
+
 #menu_wrap hr {display: block; height: 1px;border: 0; border-top: 2px solid #5F5F5F;margin:3px 0;}
 #menu_wrap .option{text-align: center;}
 #menu_wrap .option p {margin:10px 0;}  
