--- a/test.html
+++ b/test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>키워드로 장소검색하고 목록으로 표출하기</title>
+    <title>재난지도 test</title>
     <style>
 /* .map_wrap와 그 하위 요소에 공통 스타일 적용 */
 .map_wrap, .map_wrap * {
@@ -16,17 +16,18 @@
 .map_wrap {
     position: relative;
     width: 100%;
-    height: 360px;
+    height: 500px;
 }
 
 /* 검색 메뉴의 스타일 */
 #menu_wrap {
-    display: block; /* 기본적으로 표시됨 */
+    display: none; /* 기본적으로 표시됨 */
     position: absolute;
     top: 0;
     left: 0;
     bottom: 0;
-    width: 250px; /* 메뉴 너비 */
+    width: 200px; /* 메뉴 너비 */
+    height: 250px;
     margin: 10px 0 30px 10px;
     padding: 5px;
     overflow-y: auto; /* 세로 스크롤 추가 */
@@ -124,6 +125,21 @@
     background-position: 0 -56px;  }
 #placesList .item .marker_3 {
     background-position: 0 -102px;  }
+    
+#header-container2 {
+    position: absolute;
+    top: 0; /* 버튼 아래쪽에 위치 */
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    height : 25px;
+    display: block; /* 제목과 검색창을 나란히 배치 */
+    align-items: center; /* 세로 정렬 */
+    background-color: #ffffff; /* 흰색 배경 */
+    border: 1px solid #e2e2e2; /* 테두리 색상 */
+    border-radius: 5px; /* 모서리 둥글게 */
+    box-shadow: 0 2px 0px rgba(0, 0, 0, 0.5); /* 그림자 효과 */
+}
 
 </style>
 </head>
@@ -132,17 +148,22 @@
 <div class="map_wrap">
     <div id="map" style="width:100%;height:100%;position:relative;overflow:hidden;"></div>
 
-    <div id="menu_wrap" class="bg_white">
+    <div id="header-container2">
         <div class="option">
             <div>
                 <form onsubmit="searchPlaces(); return false;">
                     <input type="text" placeholder="주소 검색" id="keyword" size="15"> 
-                    <button type="submit">검색하기</button> 
+                    <button id="showMenuBtn" type="submit">검색하기</button>
+                    
+                    <div id="menu_wrap" >
+                        <div class="option">
+                            <ul id="placesList"></ul>
+                        </div>
+                    </div>
                 </form>
             </div>
         </div>
         <hr>
-        <ul id="placesList"></ul>
     </div>
 </div>
 
@@ -158,7 +179,42 @@ var mapContainer = document.getElementById('map'), // 지도를 표시할 div
     };  
 
 // 지도를 생성합니다    
-var map = new kakao.maps.Map(mapContainer, mapOption); 
+var map = new kakao.maps.Map(mapContainer, mapOption);
+
+var showMenuBtn = document.getElementById('showMenuBtn');
+var menu_wrap = document.getElementById('menu_wrap');
+
+// 버튼을 클릭하거나 엔터 키를 눌렀을 때 아이콘을 표시하거나 숨기기
+showMenuBtn.addEventListener('click', function() {
+    toggleMenu_wrap();
+});
+
+showMenuBtn.addEventListener('keydown', function(event) {
+    if (event.key === 'Enter') {
+        toggleMenu_wrap();
+    }
+});
+
+// 아이콘 컨테이너를 표시하거나 숨기는 함수
+function toggleMenu_wrap() {
+    // 현재 display 상태에 따라 표시/숨기기
+    if (menu_wrap.style.display === 'none' || menu_wrap.style.display === '') {
+        menu_wrap.style.display = 'flex';
+    } else {
+        menu_wrap.style.display = 'none';
+    }
+}
+
+// 아이콘 컨테이너에서 마우스가 벗어나면 아이콘을 숨김
+menu_wrap.addEventListener('mouseleave', function() {
+    menu_wrap.style.display = 'none';
+});
+
+
+
+
+
+
 
 // 장소 검색 객체를 생성합니다
 var ps = new kakao.maps.services.Places();  
