--- a/test.html
+++ b/test.html
@@ -191,6 +191,7 @@ showMenuBtn.addEventListener('click', function() {
 
 showMenuBtn.addEventListener('keydown', function(event) {
     if (event.key === 'Enter') {
+        searchPlaces();
         toggleMenu_wrap();
     }
 });
