--- a/test.html
+++ b/test.html
@@ -174,6 +174,10 @@
 var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption, map;
 
+// 현 위치를 저장할 변수
+var currentMarker = null; // 현 위치 마커
+var markers = []; // 검색된 마커들을 저장할 배열
+
 // 카카오 지도 API 로드 후 실행될 함수
 kakao.maps.load(function () {
     // 페이지 로드 시 바로 현 위치로 지도 초기화
@@ -200,11 +204,15 @@ function moveToCurrentLocation() {
                 map.setCenter(currentLatLng); // 기존 지도 위치 이동
             }
 
-            // 현재 위치에 마커 추가
-            var marker = new kakao.maps.Marker({
+            // 현 위치 마커 추가 (기존 마커가 있으면 제거 후 추가)
+            if (currentMarker) {
+                currentMarker.setMap(null);
+            }
+
+            currentMarker = new kakao.maps.Marker({
                 position: currentLatLng
             });
-            marker.setMap(map);
+            currentMarker.setMap(map);
 
         }, function(error) {
             alert("위치를 가져올 수 없습니다.");
@@ -217,7 +225,7 @@ function moveToCurrentLocation() {
 var showMenuBtn = document.getElementById('showMenuBtn');
 var menu_wrap = document.getElementById('menu_wrap');
 
-// 버튼을 클릭하거나 엔터 키를 눌렀을 때 아이콘을 표시하거나 숨기기
+// 버튼을 클릭하거나 엔터 키를 눌렀을 때 검색 결과를 표시하거나 숨기기
 showMenuBtn.addEventListener('click', function() {
     toggleMenu_wrap();
 });
@@ -229,7 +237,7 @@ showMenuBtn.addEventListener('keydown', function(event) {
     }
 });
 
-// 아이콘 컨테이너를 표시하거나 숨기는 함수
+//검색 결과를 표시하거나 숨기는 함수
 function toggleMenu_wrap() {
     // 현재 display 상태에 따라 표시/숨기기
     if (menu_wrap.style.display === 'none' || menu_wrap.style.display === '') {
@@ -293,8 +301,7 @@ function displayPlaces(places) {
     var listEl = document.getElementById('placesList'), 
     menuEl = document.getElementById('menu_wrap'),
     fragment = document.createDocumentFragment(), 
-    bounds = new kakao.maps.LatLngBounds(), 
-    listStr = '';
+    bounds = new kakao.maps.LatLngBounds();
 
     // 검색 결과 목록에 추가된 항목들을 제거합니다
     removeAllChildNods(listEl);
@@ -340,6 +347,14 @@ function displayPlaces(places) {
     map.setBounds(bounds);
 }
 
+// 지도 위에 표시되고 있는 마커를 모두 제거합니다
+function removeMarker() {
+    for (var i = 0; i < markers.length; i++) {
+        markers[i].setMap(null);
+    }   
+    markers = [];
+}
+
 // 검색결과 항목을 Element로 반환하는 함수입니다
 function getListItem(index, places) {
 
@@ -359,6 +374,13 @@ function getListItem(index, places) {
     el.className = 'item';
 
     return el;
+}
+
+// 검색결과 목록의 자식 Element를 제거하는 함수입니다
+function removeAllChildNods(el) {   
+    while (el.hasChildNodes()) {
+        el.removeChild(el.lastChild);
+    }
 }
 
 // 마커를 생성하고 지도 위에 마커를 표시하는 함수입니다
