--- a/login.html
+++ b/login.html
@@ -2,15 +2,100 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>로그인 페이지</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>로그인 및 회원가입 페이지</title>
+    <style>
+        /* 기존 스타일 동일 */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            background-color: #f7f9fc;
+        }
+
+        .login-container, .signup-container {
+            width: 300px;
+            padding: 2rem;
+            background-color: #ffffff;
+            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+            border-radius: 8px;
+            text-align: center;
+            display: none;
+        }
+
+        .login-container.active, .signup-container.active {
+            display: block;
+        }
+
+        h2 {
+            color: #333;
+            margin-bottom: 1rem;
+        }
+
+        input[type="text"], input[type="password"] {
+            width: 100%;
+            padding: 0.75rem;
+            margin: 0.5rem 0;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            font-size: 1rem;
+        }
+
+        button {
+            width: 100%;
+            padding: 0.75rem;
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            font-size: 1rem;
+            cursor: pointer;
+            margin-top: 1rem;
+        }
+
+        button:hover {
+            background-color: #45a049;
+        }
+
+        .switch-link {
+            color: #4CAF50;
+            cursor: pointer;
+            font-size: 0.9rem;
+            text-decoration: underline;
+            margin-top: 1rem;
+        }
+    </style>
 </head>
 <body>
-    <h2>로그인</h2>
-    <form method="post" action="login.php"> <!-- login.php로 데이터 전송 -->
-        <input type="text" name="username" placeholder="사용자 이름" required>
-        <input type="password" name="password" placeholder="비밀번호" required>
-        <button type="submit">로그인</button>
-    </form>
-    <a href="index.html">메인 페이지로 돌아가기</a>
+    <div class="login-container active">
+        <h2>로그인</h2>
+        <form method="post" action="login.php">
+            <input type="text" name="username" placeholder="사용자 이름" required>
+            <input type="password" name="password" placeholder="비밀번호" required>
+            <button type="submit">로그인</button>
+        </form>
+        <span class="switch-link" onclick="toggleForms()">회원가입</span>
+    </div>
+
+    <div class="signup-container">
+        <h2>회원가입</h2>
+        <form method="post" action="register.php">
+            <input type="text" name="username" placeholder="사용자 이름" required>
+            <input type="password" name="password" placeholder="비밀번호" required>
+            <input type="password" name="confirm_password" placeholder="비밀번호 확인" required>
+            <button type="submit">회원가입</button>
+        </form>
+        <span class="switch-link" onclick="toggleForms()">로그인</span>
+    </div>
+
+    <script>
+        function toggleForms() {
+            document.querySelector('.login-container').classList.toggle('active');
+            document.querySelector('.signup-container').classList.toggle('active');
+        }
+    </script>
 </body>
 </html>
