--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="header-container2">
             <div class="option">
                 <div>
-                    <form onsubmit="searchPlaces(); toggleMenu_wrap(); return false;" style="display: flex; align-items: center;">
+                    <form onsubmit="searchPlaces(); toggleMenu_wrap(); return false;" method="post" style="display: flex; align-items: center;">
                         <input type="text" placeholder="주소 검색" id="keyword" size="15">
                         <div style="border-left: 1px solid #e2e2e2; height: 30px; margin: 0; display: inline-block;"></div> <!-- 세로선 추가 --> 
                         <button id="showMenuBtn" type="button">
