--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
 <body>
     <div class="login-container active">
         <h2>로그인</h2>
-        <form method="post" action="login.php">
+        <form method="post" action="https://seconds12331.github.io/kakaomap/login.php">
             <input type="text" name="username" placeholder="사용자 이름" required>
             <input type="password" name="password" placeholder="비밀번호" required>
             <button type="submit">로그인</button>
@@ -82,7 +82,7 @@
 
     <div class="signup-container">
         <h2>회원가입</h2>
-        <form method="post" action="register.php">
+        <form method="post" action="https://seconds12331.github.io/kakaomap/register.php">
             <input type="text" name="username" placeholder="사용자 이름" required>
             <input type="password" name="password" placeholder="비밀번호" required>
             <input type="password" name="confirm_password" placeholder="비밀번호 확인" required>
