--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ function removeMarker() {
 function getListItem(index, places) {
 
     var el = document.createElement('li'),
-    itemStr = '<span class="markerbg marker_' + (index+1) + '"></span>' +
+    itemStr = '<span class="markerbg marker_1"></span>' +
                 '<div class="info">' +
                 '   <h5>' + places.place_name + '</h5>';
 
