--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
                             <img src="images/dodbogi.png" alt="검색" style="max-width: 20px; max-height: 20px;">
                         </button>
                     
-                        <div id="menu_wrap" >
-                            <button id="closeMenuBtn"  type="button" style="position: sticky; top: 5px; right: 5px; background: transparent; border: none; font-size: 12px; cursor: pointer;">X</button> <!--검색 결과 닫기 버튼-->
+                        <div id="menu_wrap">
+                            <button id="closeMenuBtn"  type="button" style="position: absolute; top: 5px; left: 50px; background: transparent; border: none; font-size: 12px; cursor: pointer;">X</button> <!--검색 결과 닫기 버튼-->
                             <div class="option">
                                 <ul id="placesList"></ul>
                             </div>
@@ -242,8 +242,8 @@ function displayPlaces(places) {
     // 지도에 표시되고 있는 마커를 제거합니다
     removeMarker();
     
-    // 검색 결과 1개만 표시
-    places = places.slice(0, 1);
+    // 검색 결과 중 상위 3개만 표시
+    places = places.slice(0, 3);
 
     for (var i = 0; i < places.length; i++) {
         var placePosition = new kakao.maps.LatLng(places[i].y, places[i].x),
