--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         </button>
                     
                         <div id="menu_wrap">
-                            <button id="closeMenuBtn"  type="button" style="position: absolute; top: 5px; left: 50px; background: transparent; border: none; font-size: 12px; cursor: pointer;">X</button> <!--검색 결과 닫기 버튼-->
+                            <button id="closeMenuBtn"  type="button" style="position: absolute; top: 5px; right: 5px; background: transparent; border: none; font-size: 12px; cursor: pointer;">X</button> <!--검색 결과 닫기 버튼-->
                             <div class="option">
                                 <ul id="placesList"></ul>
                             </div>
