--- a/index.html
+++ b/index.html
@@ -66,6 +66,10 @@
     <div class="header-container4">  <!-- 게시판 페이지 이동 -->
         <a href="forum.html" class="link">게시판</a>
     </div>
+    
+    <div class="header-container4">  <!-- 게시판 페이지 이동 -->
+        <a href="test.html" class="link">xxxxx</a>
+    </div>
 
     <!-- 커스텀 확대/축소 버튼 -->
     <div class="zoom-btn">
