--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <a href="forum.html" class="link">게시판</a>
     </div>
     
-    <div class="header-container4">  <!-- 게시판 페이지 이동 -->
+    <div class="header-container4" style="position: absolute; top: 35px; right: 180px;>  <!-- 게시판 페이지 이동 -->
         <a href="test.html" class="link">xxxxx</a>
     </div>
 
